# Learn-C-plus-plus-IDE

./: .gitignore  ARCHITECTURE.md  BUILD_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  CURRICULUM_SUMMARY.md  FEATURES_IMPLEMENTED.md  FEATURE_ROADMAP.md  GETTING_STARTED.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.bat  build.sh
resources/challenges/: challenge1.md  challenge15.md  challenge2.md  challenge3.md  challenge4.md  challenge5.md
resources/lessons/: lesson1.md  lesson2.md  lesson20.md  lesson3.md  lesson4.md  lesson5.md  lesson6.md
resources/templates/: basic_io.cpp
src/: BuildSystem.cpp  BuildSystem.h  ChallengesPanel.cpp  ChallengesPanel.h  DocsPanel.cpp  DocsPanel.h  EditorWidget.cpp  EditorWidget.h  LessonsPanel.cpp  LessonsPanel.h  MainWindow.cpp  MainWindow.h  ProjectManager.cpp  ProjectManager.h  RunManager.cpp  RunManager.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
